# HepLib

./: .gitignore  ABCD_8cpp.html  ABCD_8cpp__incl.map  ABCD_8cpp__incl.md5  ABCD_8cpp_source.html  ApartIBP_8cpp.html  ApartIBP_8cpp__incl.map  ApartIBP_8cpp__incl.md5  ApartIBP_8cpp_source.html  Apart_8cpp.html  Apart_8cpp__incl.map  Apart_8cpp__incl.md5  Apart_8cpp_source.html  AsGamma_8cpp.html  AsGamma_8cpp__incl.map  AsGamma_8cpp__incl.md5  AsGamma_8cpp_source.html  AsyMB_8cpp.html  AsyMB_8cpp__incl.map  AsyMB_8cpp__incl.md5  AsyMB_8cpp_source.html  BASIC_2Functions_8cpp.html  BASIC_2Functions_8cpp__incl.map  BASIC_2Functions_8cpp__incl.md5  BASIC_2Functions_8cpp_source.html  BASIC_8cpp.html  BASIC_8cpp__incl.map  BASIC_8cpp__incl.md5  BASIC_8cpp_source.html  BASIC_8h.html  BASIC_8h__dep__incl.map  BASIC_8h__dep__incl.md5  BASIC_8h__incl.map  BASIC_8h__incl.md5  BASIC_8h_source.html  Basic_8cpp.html  Basic_8cpp__incl.map  Basic_8cpp__incl.md5  Basic_8cpp_source.html  CIPrepares_8cpp.html  (+725 more)
.github/workflows/: build-check.yml  doxygen.yml  main.yml
AMF/: AMF.h  All.cpp  DEX.cpp  DEX_CORE.cpp  Fit.cpp  Loop.cpp  Single.cpp
AddOn/Applications/HepLib/: SD.m  UF.nb
AddOn/WSKernel/: WSKernel.cpp  WSKernel.h  run.sh  test.cpp  ws++
BAK/: CMakeLists.txt  Laporta.cpp  det.cpp  functions.cpp
BAK/EX/: GiNaCW.cpp
BASIC/: BASIC.cpp  BASIC.h  Fermat.cpp  Functions.cpp  ParRun.cpp  PoolPipe.cpp  PoolPipe.h  Process.cpp  Rational.cpp  Server.cpp  Sort.cpp  Symbols.h
BASIC0/: Functions.cpp  Process.cpp
Basic/: Basic.cpp  ExGiNaC.cpp  Functions.cpp  Process.cpp  WSKernel.cpp
DE/: AMF.cpp  AMFlow.cpp  Base.cpp  DE.cpp  DE.h  DESS.cpp  DEX.cpp  DEX_CORE.cpp  D_E.cpp  EoD.cpp  FLINT.cpp  FLINT.h  FlintArb.cpp  FlintArb.h  Helpers.cpp  M.cpp  Makefile  Mat.cpp  NDE.cpp  det.cpp  exFlint.cpp  exFlint.h  fuchsia.cpp  functions.cpp  vspace.cpp  vspace.h
DE0/: AMF.cpp  DESS.cpp  EoD.cpp  FLINT.cpp  FLINT.h  NDE.cpp  NDEH.cpp  vspace.cpp  vspace.h
EX/: GiNaCW.cpp  HepLib.i  HepLibW.cpp  HepLibW.h  Wrap.cpp  exfactor.cpp
ExGiNaC/: ExGiNaC.cpp  Makefile  WSKernel.cpp
Examples/: CMakeLists.txt  Chic.cpp  NIntegrate.cpp  quark-FF.cpp
Examples/exIBP/: LiteRed.nb  LiteRed2.nb  Makefile  prob  prob.cpp  t1.cpp  test.cpp
Examples/exMB/: c0.cpp
Examples/exSD/: KillPowers.cpp  Makefile  asy.cpp  c0.cpp  c1.cpp  c2.cpp  c3.cpp  c4.cpp  cw.cpp  exp0.cpp  exp1.cpp  exp2.cpp  exp3.cpp  ff-mi1.cpp  ff-mi13.cpp  ff-mi2.cpp  ff-mi3.cpp  ff-mi4.cpp  ff1.cpp  ft_pl.cpp  ginac.cpp  ibprob-ok.cpp  main.cpp  mb.cpp  mi1.cpp  mi2.cpp  nlopt.cpp  optim.cpp  sang.cpp  t0.cpp  t1.cpp  t2.cpp  test.cpp  xy.cpp
FC/: Apart.cpp  Basic.cpp  DGamma.cpp  DiracGamma.cpp  Eps.cpp  FC.h  Form.cpp  Pair.cpp  Qgraf.cpp  Quarkonium.cpp  RC.cpp  TIR.cpp
GiNaC/: exfactor.cpp
HEP/: ABCD.cpp  Apart.cpp  ApartIBP.cpp  AsGamma.cpp  Basic.cpp  DGamma.cpp  Eps.cpp  Form.cpp  HEP.h  Others.cpp  Pair.cpp  TIR.cpp
HepLib/: SD.m  UF.nb
HepLib.xcworkspace/: contents.xcworkspacedata
HepLib.xcworkspace/xcuserdata/feng.xcuserdatad/: UserInterfaceState.xcuserstate
HepLib.xcworkspace/xcuserdata/feng.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
HepLib.xcworkspace/xcuserdata/fengf.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
HepLib.xcworkspace/xcuserdata/fengf.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
IBP/: Base.cpp  Direct.cpp  FIRE.cpp  Fermat.cpp  IBP.cpp  IBP.h  KIRA.cpp  Laporta.cpp  Makefile  Solver.cpp  UKIRA.cpp
INC/: HepLib.h  HepLib.pc  Init.cpp  heplib++  update
MB/: MB.cpp  MB.h  Makefile
MMA/: SD.m  init.m
QCD/: FF.cpp  QCD.cpp  QCD.h  Quarkonium.cpp  RC.cpp
QGRAF/: QGRAF.cpp  QGRAF.h  Quarkonium.cpp  RC.cpp  qgraf-3.1.4.f
Qgraf/: Qgraf.cpp  Qgraf.h  Quarkonium.cpp  RC.cpp  qgraf-3.4.2.f
SD/: AsyMB.cpp  CIPrepares.cpp  CUBA.cpp  ChengWu.cpp  Contours.cpp  CppFormat.cpp  ErrMin.cpp  ExFormat.cpp  ExOpt.cpp  Functions.cpp  GWrapper.cpp  HCubature.cpp  HCubatureMP.cpp  Helpers.cpp  HookeJeeves.cpp  ILWrapper.cpp  InitEval.cpp  Integrates.cpp  KillPowers.cpp  Lib3_GK.h  Lib3_GaussKronrod.h  Lib3_GaussKronrodA.h  Lib3_HCubature.c  Lib3_HCubature.h  Lib3_HCubatureMP.cpp  Lib3_HCubatureMP.h  Lib3_QAG.h  Lib3_QuadPack.h  Makefile  MatDet.cpp  MinUit.cpp  NFunc.cpp  NFunctions.cpp  NFunctions.h  QAGMP.cpp  QuadMP.cpp  QuadPackMP.cpp  SD.cpp  SD.h  SecDec.cpp  (+7 more)
SD/Lib3/: HCubature.c  HCubature.h
doc/: Doxyfile  main.md
examples/: TIR.cpp  a.out  apart.cpp  color.cpp  exp.cpp  fire.cpp  form.cpp  hcubature.cpp  qgraf.cpp  t0.cpp  t1.cpp  trace.cpp
examples/FF/: N.cpp  README.md  run.sh
examples/FF/cm/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  (+14 more)
fmpz_mpoly_q/: fmpz_mpoly_q.h
include/: Basic.h  ExGiNaC.h  FC.h  HepLib.h  HepLib.pc  HepLib.sty  IBP.h  Init.cpp  MB.h  NFunctions.h  Process.h  SD.h  SUN.h  WSKernel.h  Wrap.h  heplib++  mpreal.h  update
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+107 more)
